[package]
name = "neo4jrs"
version = "0.6.0"
authors = ["John Pradeep Vincent <yehohanan7@gmail.com>", "tami5 <>"]
edition = "2018"
description = "neo4j driver in rust"
license = "MIT"
repository = "https://github.com/yehohanan7/neo4jrs"
documentation = "https://docs.rs/neo4jrs"
readme = "../README.md"
keywords = ["neo4j", "rust", "bolt", "cypher", "driver"]
categories = ["database", "network-programming", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neo4jrs-macros = { version = "0.2.1", path = "../macros" }
futures = { version = "0.3.8" }
tokio = { version = "1.0.1", features = ["full"] }
bytes = "1.0.0"
async-trait = "0.1.42"
deadpool = "0.7.0"
chrono = "0.4.19"
log = "0.4"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }
