[package]
name = "neo4jrs-macros"
version = "0.2.1"
authors = ["John Pradeep Vincent <yehohanan7@gmail.com>"]
edition = "2018"
description = "macros used by neo4jrs"
license = "MIT"
repository = "https://github.com/yehohanan7/neo4jrs"

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0", features=["full", "extra-traits"]}
quote = "1.0"
